# learn_rust

./: Cargo.toml  README.md
c/: oops.c
hello/: Cargo.toml
news/c/: .gitignore
news/functions/: Cargo.toml
news/functions/src/: main.rs
news/haskell/mandelbrot/: .gitignore  mandel_speed.cmd  package.yaml
news/haskell/mandelbrot/app/: Main.hs  speedChart.hs
news/haskell/mandelbrot/speed_results/: concurrent.txt  mandel_speed_mini.cmd  noConcurrent.txt
news/haskell/mandelbrot/src/: Mandelbrot.hs  Parse.hs  Png.hs  SpeedChart.hs  Try.hs
news/haskell/servant-gcd/: .gitignore  ChangeLog.md  README.md  package.yaml
news/haskell/servant-gcd/src/: Lib.hs
news/haskell/servant-hello/: .gitignore  ChangeLog.md  README.md  package.yaml
news/haskell/servant-hello/src/: Lib.hs
news/haskell/show-gcds/: .gitignore  ChangeLog.md  package.yaml
news/haskell/show-gcds/src/: Gcd.hs
news/haskell/show-gcds/test/: Spec.hs
news/iron-gcd/: Cargo.toml
news/iron-gcd/src/: main.rs
news/mandlbrot/: .gitignore  Cargo.toml  concurrent.txt  noConcurrent.txt
news/mandlbrot/src/: main.rs
news/show-gcds/: README.md
news/show-gcds/app/: Main.hs
olds/: Cargo.toml
olds/src/: if.rs  loops.rs  mutability.rs  ownership.rs  vectors.rs
src/: borrowing.rs  fib0.rs  if.rs  lifetime.rs  struct.rs
