[package]
name = "learn_rust"
version = "0.1.0"
authors = ["Yoshikuni Jujo <PAF01143@nifty.ne.jp>"]

[dependencies]

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "fib0"
path = "src/fib0.rs"

[[bin]]
name = "if"
path = "src/if.rs"

[[bin]]
name = "loops"
path = "src/loops.rs"

[[bin]]
name = "vectors"
path = "src/vectors.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "borrowing"
path = "src/borrowing.rs"
